$Id: CHANGELOG.txt,v 1.31 2006/03/07 00:05:56 gregluck Exp $

<release version="0.9" date="2009-12-31" desc=" release">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="update">
        Apply checkstyle and clean up code
    </action>
    <action dev="Greg Luck" type="add">
        Change logging to SLF4J.
    </action>
</release>



<release version="0.8" date="2009-06-26" desc="Minor release">

    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="update">
        Improve ServerContext so that it shut down Ehcache core in an orderly way when the war shuts down.
    </action>
</release>

<release version="0.7" date="2009-04-11" desc="Minor release">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Add ehcacheTimeToLiveSeconds as a PUT request header which enables the per element time to live to override
        the defaults for a cache.
    </action>
</release>

<release version="0.6" date="2008-12-24" desc="Major release">
    <!-- Features and Enhancements -->
    <action dev="Greg Luck" type="add">
        Register Ehcache core MBeans with the platform MBeanServer. This adds Ehcache JMX support
        to the web container, which can then be accessed by JMX consoles in the same way that the
        web container supports, which is normally exposing an RMI service URL. See the documentation
        for examples on how to use this with Tomcat and Glassfish.
    </action>
    <action dev="Greg Luck" type="update">
        Upgrade Jersey to the 1.0 release. There are no behavioural changes.
    </action>
    <action dev="Greg Luck" type="update">
        Cache resources now return a more complete representation showing configuration and statistics sub-elements.
    </action>
    <action dev="Greg Luck" type="add">
        Added a DELETE cachename/* method to the API. Use this to clear the contents of a cache without removing
         the cache itself.
    </action>
</release>
